acme-eks-demo/infra/networking.tf
data "aws_availability_zones" "available" {
  state = "available"
}

resource "aws_vpc" "acme" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "acme-financial-vpc"
    App  = "payments"
  }
}

resource "aws_subnet" "private" {
  count             = 2
  vpc_id            = aws_vpc.acme.id
  cidr_block        = "10.0.${count.index}.0/24"
  availability_zone = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name                              = "acme-private-${count.index}"
    "kubernetes.io/role/internal-elb" = "1"
  }
}

resource "aws_subnet" "public" {
  count                   = 2
  vpc_id                  = aws_vpc.acme.id
  cidr_block              = "10.0.${count.index + 10}.0/24"
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name                     = "acme-public-${count.index}"
    "kubernetes.io/role/elb" = "1"
  }
}

resource "aws_internet_gateway" "acme" {
  vpc_id = aws_vpc.acme.id
  tags   = { Name = "acme-igw" }
}

resource "aws_eip" "nat" {
  domain = "vpc"
  tags   = { Name = "acme-nat-eip" }
}

resource "aws_nat_gateway" "acme" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id
  tags          = { Name = "acme-nat" }
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.acme.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.acme.id
  }

  tags = { Name = "acme-private-rt" }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.acme.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.acme.id
  }

  tags = { Name = "acme-public-rt" }
}

resource "aws_route_table_association" "private" {
  count          = 2
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "public" {
  count          = 2
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}
